--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ section:nth-child(4) {
     font-size: xxx-large;
     text-align: center;
     transition: all 2s ease;
+    -webkit-transition: all 2s ease;
 }
 
 .message {
