--- a/style.css
+++ b/style.css
@@ -67,12 +67,12 @@ section:nth-child(4) {
     left: 0;
 }
 
-#Title {
+.title {
     position: absolute;
     font-size: xxx-large;
     text-align: center;
-    transition: all 2s ease;
-    -webkit-transition: all 2s ease;
+    transition: all 2s ease-in-out;
+    /* -webkit-transition: all 2s ease; */
 }
 
 .message {
