--- a/style.css
+++ b/style.css
@@ -73,6 +73,13 @@ section:nth-child(4) {
     text-align: center;
     transition: all 2s ease-in-out;
     /* -webkit-transition: all 2s ease; */
+    animation: colourChange 2s  linear infinite;
+}
+
+@keyframes colourChange {
+    50%{
+        color: red;
+    }
 }
 
 .message {
